# cody

./: .gitignore  README.md  app.css  config.json_example  main.py  pyproject.toml  test_checkpoint.py  test_git_utils.py
cmd/: clear.py  help.py
components/: app_shell_keybinds.py  input_modal.css  input_modal.py
components/agents/: agents_sidebar_tab.css  agents_sidebar_tab.py
components/chat/: chat.css  chat.py  input.py  message.py  streaming_chat.py
components/db/: db_sidebar_tab.css  db_sidebar_tab.py  db_tree.py  results_modal.css  results_modal.py
components/fs/: file_tree.css  file_tree.py  file_tree_node.py
components/git/: diff_modal.css  diff_modal.py  git_sidebar_tab.css  git_sidebar_tab.py  git_tree.py  git_tree_actions.py
components/sidebar/: chat_history.css  chat_history.py  password_vault_tab.css  password_vault_tab.py  password_vault_tree.py  settings.css  settings.py  tool_list.css  tool_list.py  wrapper.css  wrapper.py
components/tabs/: __init__.py  body.py  (+4 more)
docs/: extending_cody.md  generic_tree.md  informational_flow.md  password_vault.md  utils_reference.md
examples/: README.md
themes/: haxor.py
utils/: agent.py  cfg_man.py  cmd_loader.py  config_crypto.py  db.py  db_auth.py  db_connection_forms.py  docling_convert.py  editors.py  file_ops.py  file_tree_defaults.py  fs.py  fs_tree.py  git.py  git_viewer.py  html_markdown.py  icons.py  interface_defaults.py  layout_visibility.py  leader_registry.py  memory_vault.py  password_vault.py  paths.py  safe_url.py  skill_components.py  skills.py  theme_man.py  tool.py  tree_model.py
(+130 files in other folders)
